--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1>SFSU CSC667 PROJECT</h1>
+    <p>This will be the uno game developed by Team-G</p>
   </body>
 </html>
