--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,34 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="/socket.io/socket.io.js"></script>
+    <style>
+      * { margin: 0; padding: 0; box-sizing: border-box; }
+      body { font: 13px Helvetica, Arial; }
+      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+      form input { border: 0; padding: 10px; width: 20%; margin-right: .5%; }
+      form button { width: 9%; background: rgb(130, 224, 255); border: left; padding: 10px; }
+      #messages { list-style-type: none; margin: 0; padding: 0; }
+      #messages li { padding: 5px 10px; }
+      #messages li:nth-child(odd) { background: #eee; }
+    </style>
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+<script>
+  $(function () {
+    var socket = io.connect('http://localhost:3000');
+    $('form').submit(function(){
+      socket.emit('chat message', $('#m').val());
+      $('#m').val('');
+      return true;
+    });
+  });
+</script>
+  <ul id="messages"></ul>
+    <form action="">
+    <input id="m"  autocomplete="off" /><button>Send</button>
+    </form>
   </body>
 </html>
