--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
+<% include ./partials/header %>
+
     <h1>SFSU CSC667 PROJECT</h1>
     <p>This will be the uno game developed by Team-G</p>
   </body>
