Implement user login and registration

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,3 +16,39 @@ body {
 	text-align: center;
 	color: #4BB543;
 }
+
+.portfolio-item {
+  margin-bottom: 30px;
+}
+
+h1 {
+    text-align: center;
+}
+
+h4 a {
+    color:inherit;
+    text-align: center;
+}
+
+table.gridtable {
+    font-family: verdana,arial,sans-serif;
+    font-size:11px;
+    color:#333333;
+    border-width: 1px;
+    border-color: #666666;
+    border-collapse: collapse;
+}
+table.gridtable th {
+    border-width: 1px;
+    padding: 8px;
+    border-style: solid;
+    border-color: #666666;
+    background-color: #dedede;
+}
+table.gridtable td {
+    border-width: 1px;
+    padding: 8px;
+    border-style: solid;
+    border-color: #666666;
+    background-color: #ffffff;
+}
