--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,82 @@
 <% include ./partials/header %>
+<div class="container">
 
+  <!-- Page Heading -->
+  <h1 class="my-4">Lobby</h1>
+
+  <div class="row">
+    <div class="col-lg-6 portfolio-item">
+      <div class="card h-100">
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">Rooms</a>
+          </h4>
+          <table class="gridtable">
+            <tr>
+                <th>Room Name</th><th>Action</th>
+            </tr>
+            <tr>
+                <td>Room 1</td><td>Join</td>
+            </tr>
+            <tr>
+                <td>Room 2</td><td>Join</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-6 portfolio-item">
+      <div class="card h-100">
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">Chat Space</a>
+          </h4>
+          <table class="gridtable">
+            <tr>
+                <th>Player Name</th><th>Content</th>
+            </tr>
+            <tr>
+                <td>Jerry</td><td>hahahahahahahahhahahhaa</td>
+            </tr>
+            <tr>
+                <td>Jack</td><td>hahhahahahahahahahahahahha</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-6 portfolio-item">
+      <div class="card h-100">
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#" >Leaderboard</a>
+          </h4>
+          <table class="gridtable">
+            <tr>
+                <th>Name</th><th>Points</th>
+            </tr>
+            <tr>
+                <td>Jack</td><td>1000</td>
+            </tr>
+            <tr>
+                <td>Jerry</td><td>2000</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <!-- /.row -->
+
+</div>
+<!-- /.container -->
+
+</body>
+
+</html>
+<!--
     <h1>SFSU CSC667 PROJECT</h1>
     <p>This will be the uno game developed by Team-G</p>
   </body>
-</html>
+</html> -->
