--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,8 +24,8 @@
   <li class="nav-item active">
     <a class="nav-link" href="/">Lobby<span class="sr-only">(current)</span></a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link disabled" href="#">Gamerooms</a>
+  <li class="nav-item active">
+    <a class="nav-link" href="/gameroom">Gamerooms</a>
   </li>
 
 </ul>
