--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,14 +62,17 @@
            <li class="login page">
             <div class="form">
               <h3 class="title">What's your nickname?</h3>
-              <input class="usernameInput" type="text" maxlength="14" />
+              <input id="nameInput" type="text" maxlength="14" />
             </div>
            </li>
 
           <script src="/scripts/lobby_chat.js"></script>
         <ul id="messages"></ul>
-          <form action="">
-            <input id="m"  autocomplete="off" /><button>Send</button>
+          <form id = 'm-form' action="">
+            <input id="m" placeholder="message to someone"autocomplete="off"/>
+            <!-- clear the message field -->
+            <button id ='click'> Send
+            </button>
           </form>
         </div>
       </div>
