implement gameroom and user profile

--- a/views/gameRoom.ejs
+++ b/views/gameRoom.ejs
@@ -1,2 +1,21 @@
 <% include ./partials/header %>
-<h1> This is game room <h1>
+
+
+<head>
+	<title> Game Room </title>
+
+
+</head>
+
+<body background = "https://i.stack.imgur.com/q02th.jpg">
+	<div class="container" style="position:fixed; left:30%; bottom:10%">
+        <button type="button" style="width:100px;background-color:black;color:white">START</button>
+        <button type="button" style="width:100px;background-color:black;color:white">PASS</button>
+        <button type="button" style="width:100px;background-color:black;color:white">UNO</button>
+        <button type="button" style="width:100px;background-color:black;color:white">DRAW</button>
+	</div>
+	
+	<div class="chat-input" style="position:fixed; right:5%; bottom:30%">
+		<input type = "text" placeholder="Message...">
+		<button type="button" style="width:100px;background-color:black;color:white">SEND</button>
+</body>	
