--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,5 +1,4 @@
 <% include ./partials/header %>
-<h1> This is user profile<h1>
 
 
 
@@ -15,7 +14,7 @@
 
                 </div>
                 <div class="avatar">
-                    <img alt="" src="http://lorempixel.com/100/100/people/9/">
+                    <img alt="" src="https://image.freepik.com/free-icon/user-profile-icon_318-33925.jpg">
                 </div>
                 <div class="info">
                     <div class="title">
