Implement gameroom CRUD functions
Lay down basic framework for creation of gamerooms and adding of players

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,17 @@ body {
   color: #00B7FF;
 } */
 
+#create_room {
+  position: absolute;
+  z-index: 2;
+  top: 20%;
+  left: 80%;
+}
+
+.fa-plus:hover {
+  color: green;
+}
+
 .title {
   margin-bottom: 10px;
   background-color: #e6e6e6;
