--- a/views/gameRoom.ejs
+++ b/views/gameRoom.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header %>
   <form action="/gameroom/leave/<%= id %>" method="POST">
-    <input type="hidden" name="roomId" value="<%= id %>">
+    <input id="room-id" type="hidden" name="roomId" value="<%= id %>">
     <input type="submit" style="width:100px;background-color:black;color:white" value="LEAVE ROOM">
   </form>
   
