--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,6 +35,7 @@
 <ul class="navbar-nav navbar-right"
 <li class="nav-item">
   <% if(user) { %>
+    <a class="nav-link" href="#">Score: <%= user.score %></a>    
     <a class="nav-link active" href="#"><%= user.username %></a>
   <% } else { %>
     <a class="nav-link active" href="/user/login">Login</a>
