--- a/views/gameRoom.ejs
+++ b/views/gameRoom.ejs
@@ -3,10 +3,12 @@
     <input id="room-id" type="hidden" name="roomId" value="<%= id %>">
     <input type="submit" style="width:100px;background-color:black;color:white" value="LEAVE ROOM">
   </form>
-  
+
 
   <div class="container" style="position:fixed; left:30%; bottom:10%">
-    <button type="button" style="width:100px;background-color:black;color:white">START</button>
+    <button id="start-button" style="width:100px;background-color:black;color:white">START</button>
+    <button id="change-color" style="width:100px;background-color:black;color:white">CColor</button>
+    <button id="play-card" style="width:100px;background-color:black;color:white">PLAY CARD</button>
     <button type="button" style="width:100px;background-color:black;color:white">PASS</button>
     <button type="button" style="width:100px;background-color:black;color:white">UNO</button>
     <button type="button" style="width:100px;background-color:black;color:white">DRAW</button>
