--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <div class="container">
   <!-- Page Heading -->
   <% if(error.message) { %>
-    <div class="alert alert-danger center" role="alert">
+    <div class="alert alert-danger show fade center" id="divChild" >
       <% if(error.message == 'roomFull') { %>
         Sorry, room <%= error.room %> is full.
       <% } else if(error.message == 'doesNotExist') {%>
@@ -10,6 +10,9 @@
       <% } else if(error.message == 'unknownError') { %>
         Sorry, an unknown error occurred.
       <% } %>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
     </div>
   <% } %>
       
@@ -103,10 +106,4 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="/scripts/lobby_chat.js"></script>
 <script src="/scripts/create_room.js"></script>
-</body>
-</html>
-<!--
-    <h1>SFSU CSC667 PROJECT</h1>
-    <p>This will be the uno game developed by Team-G</p>
-  </body>
-</html>
+<% include ./partials/footer %>
