Fix opponent placement issues
Quick fixes for deployment server

Specify node version

Change Jquery cdn to https

Fix socket namespace issue

--- a/views/gameRoom.ejs
+++ b/views/gameRoom.ejs
@@ -34,12 +34,9 @@
 
 	<!-- other players' deck -->
 	<div id="opponents">
-		<div id="opponent-1">
-		</div>
-		<div id="opponent-2">
-		</div>
-		<div id="opponent-3">
-		</div>
+		<div id="opponent-1"></div>
+		<div id="opponent-2"></div>
+		<div id="opponent-3"></div>
 	</div>
 
 	<!-- button -->
