--- a/views/gameRoom.ejs
+++ b/views/gameRoom.ejs
@@ -8,25 +8,20 @@
 		}
 	</style>
 
+
   <form action="/gameroom/leave/<%= id %>" method="POST">
     <input id="room-id" type="hidden" name="roomId" value="<%= id %>">
     <input id="user-id" type="hidden" name="userId" value="<%= user.id %>">
     <input id="leave-button" type="submit" style="width:100px;background-color:black;color:white" value="LEAVE ROOM">
   </form>
   
-  <div id="p1"></div>
-  
-  <div id="p2"></div>
-  
-  <div id="p3"></div>
-  
-  <div id="p4"></div>
-  
   <div id="turn-indicator"></div>
 
 	<!-- draw and play deck -->
 	<div id="deck-container">
 	</div>
+
+	<div id="error"></div>
 
 	<!-- draw and play deck -->
 	<div id="my-hand">
@@ -42,11 +37,9 @@
 	<!-- button -->
 	<div class="container" style="position:fixed; left:30%; bottom:26%">
 			<button id="start-button" style="width:100px;background-color:black;color:white">START</button>
-			<button id="change-color" style="width:100px;background-color:black;color:white">CColor</button>
-			<button id="play-card" style="width:100px;background-color:black;color:white">PLAY CARD</button>
-			<button type="button" style="width:100px;background-color:black;color:white">PASS</button>
+			<button id="pass-turn" style="width:100px;background-color:black;color:white">PASS</button>
 			<button type="button" style="width:100px;background-color:black;color:white">UNO</button>
-			<button type="button" style="width:100px;background-color:black;color:white">DRAW</button>
+			<button id="draw-card" style="width:100px;background-color:black;color:white">DRAW</button>
 	</div>
 
 	<div class="chat-input" style="position:fixed; right:0%; bottom:0%">
